--- a/index.html
+++ b/index.html
@@ -34,17 +34,31 @@
 <!-- AFRAME SCENE -->
   <a-scene>
     <a-assets>
-      <img id="chevron" src="img/chevron.png">
-    </a-assets>
+     <a-asset-item id="sun" src="/assets/sun.glb"></a-asset-item>
+     <a-asset-item id="mercury" src="/assets/mercury.glb"></a-asset-item>
+     <a-asset-item id="venus" src="/assets/venus.glb"></a-asset-item>
+     <a-asset-item id="earth" src="/assets/earth.glb"></a-asset-item>
+     <a-asset-item id="moon" src="/assets/moon.glb"></a-asset-item>
 
+   </a-assets>
 
-    <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-    <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-    <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
+    <!-- <a-entity camera look-controls position="0 100 0"></a-entity> -->
 
-    <a-image src="#chevron" position="0 0 -2" repeat="100 100" rotation="-90 0 0" width="100" height="200" ></a-image>
-    <a-light type="ambient" color="#3fb0d4"></a-light>
-    <a-sky color="#b80505"></a-sky>
+    <a-entity rotation="0 0 0" animation="property: rotation; to: 0 0 360; loop: true; easing: linear; duration: 1000">
+      <a-entity gltf-model="#sun" position="0 0 -100" scale=".05 .05 .05"></a-entity>
+    </a-entity>
+    <a-entity rotation="0 0 0" animation="property: rotation; to: 0 0 360; loop: true; easing: linear; duration: 88">
+      <a-entity gltf-model="#mercury" position="0 50 -100" scale=".01 .01 .01"></a-entity>
+    </a-entity>
+    <a-entity rotation="0 0 0" animation="property: rotation; to: 0 0 360; loop: true; easing: linear; duration: 224">
+      <a-entity gltf-model="#venus" position="0 75 -100" scale=".01 .01 .01"></a-entity>
+    </a-entity>
+    <a-entity rotation="0 0 0" animation="property: rotation; to: 0 0 360; loop: true; easing: linear; duration: 365">
+      <a-entity gltf-model="#earth" position="0 100 -100" scale=".01 .01 .01"></a-entity>
+    </a-entity>
+
+    <a-light type="ambient" position="0 0 -100" color="#ffffff"></a-light>
+    <a-sky color="#16002b"></a-sky>
 </a-scene>
 
 
