edited readme, deleted non-essential files

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Web VR</title>
+  <title>Solar VR</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -99,7 +99,7 @@
 
     <a-light type="ambient" position="0 0 -100" color="#ffffff"></a-light>
     <a-sky color="black"></a-sky>
-    <a-entity star-system></a-entity>
+    <a-entity star-system="count:1000;"></a-entity>
 </a-scene>
 
 
