tryed loading assets from external site: still v slow

--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
 <!-- AFRAME SCENE -->
   <a-scene>
     <a-assets>
-     <a-asset-item id="sun" src="/assets/sun.glb"></a-asset-item>
-     <a-asset-item id="mercury" src="/assets/mercury.glb"></a-asset-item>
-     <a-asset-item id="venus" src="/assets/venus.glb"></a-asset-item>
-     <a-asset-item id="earth" src="/assets/earth.glb"></a-asset-item>
-     <a-asset-item id="moon" src="/assets/moon.glb"></a-asset-item>
-     <a-asset-item id="mars" src="/assets/mars.glb"></a-asset-item>
-     <a-asset-item id="jupiter" src="/assets/jupiter.glb"></a-asset-item>
-     <a-asset-item id="saturn" src="/assets/saturn.glb"></a-asset-item>
-     <a-asset-item id="uranus" src="/assets/uranus.glb"></a-asset-item>
-     <a-asset-item id="neptune" src="/assets/neptune.glb"></a-asset-item>
-     <a-asset-item id="pluto" src="/assets/pluto.glb"></a-asset-item>
+     <a-asset-item id="sun" src="https://solarsystem.nasa.gov/system/resources/gltf_files/2352_Sun_1_1391000.glb"></a-asset-item>
+     <a-asset-item id="mercury" src="https://solarsystem.nasa.gov/system/resources/gltf_files/2369_Mercury_1_4878.glb"></a-asset-item>
+     <a-asset-item id="venus" src="https://solarsystem.nasa.gov/system/resources/gltf_files/2343_Venus_1_12103.glb"></a-asset-item>
+     <a-asset-item id="earth" src="https://solarsystem.nasa.gov/system/resources/gltf_files/2393_Earth_1_12756.glb"></a-asset-item>
+     <a-asset-item id="moon" src="https://solarsystem.nasa.gov/system/resources/gltf_files/2366_Moon_1_3474.glb"></a-asset-item>
+     <a-asset-item id="mars" src="https://solarsystem.nasa.gov/system/resources/gltf_files/2372_Mars_1_6792.glb"></a-asset-item>
+     <a-asset-item id="jupiter" src="https://solarsystem.nasa.gov/system/resources/gltf_files/2375_Jupiter_1_142984.glb"></a-asset-item>
+     <a-asset-item id="saturn" src="https://solarsystem.nasa.gov/system/resources/gltf_files/2355_Saturn_1_120536.glb"></a-asset-item>
+     <a-asset-item id="uranus" src="https://solarsystem.nasa.gov/system/resources/gltf_files/2344_Uranus_1_51118.glb"></a-asset-item>
+     <a-asset-item id="neptune" src="https://solarsystem.nasa.gov/system/resources/gltf_files/2364_Neptune_1_49528.glb"></a-asset-item>
+     <a-asset-item id="pluto" src="https://solarsystem.nasa.gov/system/resources/gltf_files/2357_Pluto_1_2374.glb"></a-asset-item>
 
    </a-assets>
 
